lox-tests/tests/field/get_on_function.stderr
ERROR: Only class instances have properties
 --> 3:1
  |
3 | foo.bar; // expect runtime error: Only instances have properties.
  | ^-----^
